# JUMP0X1_lastv-

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  UBUNTU_GUIDE.md  VERSION  requirements.txt  run_live.py  run_live.sh  run_paper.py  run_paper.sh  run_verify.sh  setup.sh
.mind/: .gitignore  MEMORY.md  REMINDERS.md  config.json  relevance.json  state.json
archive/: analyze_price_movement.py  analyze_price_movement_v2.py  analyze_win_loss_patterns.py  build_dashboard_pipeline.py  build_real_dashboard.py  generate_validation_dashboard.py  regime_analysis.py  regime_analysis_full.py  simulate_hedge_overlay.py  smoke_test_metrics.py  validate_streak_rule.py
archive/PK8_PH/: .gitignore  Cargo.toml
archive/PK8_PH/scripts/: analyze_data.py  backtest_config.py  backtest_full_sweep.py  backtest_sweep.py  backtest_v13.py  check_status.sh  quick_test.sh  run_ab.sh  run_all.sh  run_collector.sh  run_recorder.sh
archive/PK8_PH/src/engine/: clob_ws.rs  gamma.rs  live_data_ws.rs  metrics.rs  mod.rs  rollover.rs  types.rs  user_ws.rs
docs/: AB_TEST_STATUS.html  ARCHITECTURE.md  BACKTEST_RESULTS.md  BOT_ARCHITECTURE.html  COMMANDS.md  DIRECTIONAL_TRADING_ROADMAP.md  GO_LIVE_CHECKLIST.md  KNOWLEDGE.md  MIGRATION_NOTES.md  PHASE1_LOCKED.md  QUANT_REPORT_001.html  QUANT_REPORT_001.md  RESEARCH_REPORT_2025-12-31.md  RULEV3_LOGIC.md  SETUP.md  STATE.html  STATE.md  STRATEGY.md  TELEGRAM_ALPHA_REPORT.md  TELEGRAM_ANALYSIS_REPORT.md  TRADER_INTELLIGENCE.html  build_validation_dashboard.py  dashboard.html  validation_dashboard.html
experiments/: analyze_cheap_prices.py  analyze_crossings.py  focused_sweep.py  (+20 more)
(+14 files in other folders)
